# xeon-video-translation

./: .env.example  .gitignore  LICENSE  Makefile  README.md  docker-compose.yml
artifacts/inputs/: IMG_7228.MOV
backend/: Dockerfile  pyproject.toml
backend/app/: config.py  main.py  storage.py
backend/app/api/: jobs.py  stream.py
backend/app/pipeline/: __init__.py  audio.py  lipsync.py  orchestrator.py  stabilize.py  transcribe.py  translate.py  tts.py  watermark.py
backend/app/pipeline/_lipsync/: __init__.py  audio.py  latentsync_client.py  musetalk_client.py  wav2lip_model.py  wav2lip_runner.py
backend/tests/: test_audio.py  test_lipsync.py  test_translate.py  test_tts.py  test_tts_timing.py  test_watermark.py
backend/tests/fixtures/: .gitkeep
docs/: architecture.md  ethics.md  latentsync-pipeline.md  limitations.md  lipsync.md  models.md
frontend/: Dockerfile  next.config.js  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/components/: LanguagePicker.tsx  LipsyncPicker.tsx  PipelineView.tsx  ResultPlayer.tsx  Uploader.tsx
frontend/app/lib/: api.ts
scripts/: download_models.sh  fetch.sh  progress.sh  run_latentsync_adaptive.sh  smoke_test.sh
scripts/latentsync_debug/: BYTEDANCE_AUDIT.md  DEBUG_PLAN.md  analyze_affines.py  environment_audit.py  stability_metric.py
services/lipsync-latentsync/: Dockerfile  NOTICE  README.md  pyproject.toml
services/lipsync-latentsync/app/: main.py
services/lipsync-latentsync/app/latentsync/models/: unet.py
services/lipsync-latentsync/app/latentsync/pipelines/: lipsync_pipeline.py
services/lipsync-latentsync/app/latentsync/utils/: _debug.py  affine_transform.py  face_detector.py  image_processor.py  util.py
services/lipsync-latentsync/app/latentsync/whisper/whisper/: __init__.py
services/lipsync-latentsync/app/latentsync_driver/: inference.py
services/lipsync-latentsync/scripts/: download_models.sh
services/musetalk/: Dockerfile  README.md  pyproject.toml
services/musetalk/app/: main.py
services/musetalk/app/musetalk/: __init__.py  _compat.py  audio_features.py  blending.py  face_tracking.py  inference.py
services/musetalk/app/musetalk/_codeformer/: __init__.py  codeformer_arch.py  face_alignment.py  runner.py  vqgan_arch.py
services/musetalk/app/musetalk/face_parsing/: __init__.py  resnet.py
services/musetalk/app/musetalk/models/: unet.py  vae.py
services/musetalk/scripts/: download_models.sh
