[project]
name = "polyglot-demo-backend"
version = "0.1.0"
description = "Open-source video translation demo backend (CPU-only build)"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }

dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "pydantic>=2.6",
  "pydantic-settings>=2.2",
  "python-multipart>=0.0.9",
  "sse-starlette>=2.1",
  "anyio>=4.3",

  # Pipeline
  "ffmpeg-python>=0.2",
  "faster-whisper>=1.0.3",

  # NLLB translation. transformers wants torch; we install the CPU wheel.
  # Upper bound is coqui-tts's compat window — `isin_mps_friendly` was added
  # in 4.44 (TTS imports it) and later renamed/relocated in 4.50, so a bare
  # `>=4.40` lets pip land on something that either lacks the symbol or
  # breaks the import path. Narrow the range to what coqui-tts 0.24 was
  # tested against.
  "transformers>=4.44,<4.47",
  "sentencepiece>=0.2",
  "numpy<2",

  # TTS / voice cloning (Stage 4). `coqui-tts` is the maintained fork of
  # Coqui's original TTS library. Pulls in XTTS-v2 on first use (~1.8 GB).
  # License: CPML — see docs/models.md. Demo use only.
  "coqui-tts>=0.24",

  # IndicF5 (PR #74) loads its inference code via HuggingFace
  # `trust_remote_code=True`. That code imports `pydub` for audio I/O —
  # a tiny ffmpeg-wrapping library that we don't otherwise need. Listed
  # here so the import doesn't surface as a runtime TTSError. ffmpeg
  # itself is already present in the backend image.
  "pydub>=0.25",

  # Stage 5 (lipsync) + Stage 6 (mux). opencv-headless avoids pulling X11;
  # librosa/scipy are needed for Wav2Lip's mel spectrogram preprocessing.
  "opencv-python-headless>=4.9",
  "librosa>=0.10",
  "scipy>=1.11",

  # torch is intentionally NOT pinned here so users can install the CPU wheel
  # via the PyTorch CPU index. The Dockerfile installs it explicitly.
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "httpx>=0.27",
  "ruff>=0.4",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
