[project]
name = "polyglot-demo-backend"
version = "0.1.0"
description = "Open-source video translation demo backend (CPU-only build)"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }

dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "pydantic>=2.6",
  "pydantic-settings>=2.2",
  "python-multipart>=0.0.9",
  "sse-starlette>=2.1",
  "anyio>=4.3",

  # Pipeline
  "ffmpeg-python>=0.2",
  "faster-whisper>=1.0.3",

  # NLLB translation. transformers wants torch; we install the CPU wheel.
  # Upper bound is coqui-tts's compat window — `isin_mps_friendly` was added
  # in 4.44 (TTS imports it) and later renamed/relocated in 4.50, so a bare
  # `>=4.40` lets pip land on something that either lacks the symbol or
  # breaks the import path. Narrow the range to what coqui-tts 0.24 was
  # tested against.
  "transformers>=4.44,<4.47",
  "sentencepiece>=0.2",
  "numpy<2",

  # TTS / voice cloning (Stage 4). `coqui-tts` is the maintained fork of
  # Coqui's original TTS library. Pulls in XTTS-v2 on first use (~1.8 GB).
  # License: CPML — see docs/models.md. Demo use only.
  "coqui-tts>=0.24",

  # IndicF5 (PR #74) loads its inference code via HuggingFace
  # `trust_remote_code=True`. The custom code is forked from F5-TTS,
  # which has a long-tail of niche audio / tokenization / model deps
  # we don't otherwise need. Each one surfaces as a runtime TTSError
  # on first load until added here.
  #
  # Discovery sequence (PR #77, #78, #79):
  #   - pydub: ffmpeg-wrapping audio I/O
  #   - rjieba: Rust-backed Chinese tokenizer (F5-TTS text normalization
  #     step; imported even on Indic targets via shared code path)
  #   - torchdiffeq: ODE solvers for F5-TTS flow-matching inference
  #
  # Pre-emptively pinning the rest of F5-TTS's typical dep surface
  # (ema-pytorch, x-transformers, vocos) so a later import doesn't
  # surface as another iteration here. These are all small.
  #
  # If a future load fails with another `No module named X`, add X
  # below and rebuild the backend image (`docker compose up -d --build
  # backend`).
  "pydub>=0.25",
  "rjieba>=0.1.11",
  "torchdiffeq>=0.2.4",
  "ema-pytorch>=0.5",
  "x-transformers>=1.30",
  "vocos>=0.1.0",

  # Stage 5 (lipsync) + Stage 6 (mux). opencv-headless avoids pulling X11;
  # librosa/scipy are needed for Wav2Lip's mel spectrogram preprocessing.
  "opencv-python-headless>=4.9",
  "librosa>=0.10",
  "scipy>=1.11",

  # torch is intentionally NOT pinned here so users can install the CPU wheel
  # via the PyTorch CPU index. The Dockerfile installs it explicitly.
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "httpx>=0.27",
  "ruff>=0.4",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
