[project]
name = "polyglot-demo-backend"
version = "0.1.0"
description = "Open-source video translation demo backend (CPU-only build)"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }

dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "pydantic>=2.6",
  "pydantic-settings>=2.2",
  "python-multipart>=0.0.9",
  "sse-starlette>=2.1",
  "anyio>=4.3",

  # Pipeline
  "ffmpeg-python>=0.2",
  "faster-whisper>=1.0.3",

  # NLLB translation. transformers wants torch; we install the CPU wheel.
  # Upper bound is coqui-tts's compat window — `isin_mps_friendly` was added
  # in 4.44 (TTS imports it) and later renamed/relocated in 4.50, so a bare
  # `>=4.40` lets pip land on something that either lacks the symbol or
  # breaks the import path. Narrow the range to what coqui-tts 0.24 was
  # tested against.
  "transformers>=4.44,<4.47",
  "sentencepiece>=0.2",
  "numpy<2",

  # TTS / voice cloning (Stage 4). `coqui-tts` is the maintained fork of
  # Coqui's original TTS library. Pulls in XTTS-v2 on first use (~1.8 GB).
  # License: CPML — see docs/models.md. Demo use only.
  "coqui-tts>=0.24",

  # IndicF5 (PR #74) loads its inference code via HuggingFace
  # `trust_remote_code=True`. The custom code is forked from F5-TTS.
  # The Dockerfile installs `f5-tts` with `--no-deps` (to avoid a
  # transformers pin fight with coqui-tts), so F5-TTS's own deps don't
  # come in transitively — they have to be listed somewhere.
  #
  # Rather than discover each missing dep one TTSError at a time
  # (PRs #77–#80 went through this five times before we caught on),
  # this list mirrors F5-TTS upstream's published requirements.txt
  # in full. IndicF5 can't import anything F5-TTS doesn't, so this
  # closes the discovery loop permanently.
  #
  # When upstream F5-TTS adds a dep we'll need to refresh this list;
  # diff against
  # https://github.com/SWivid/F5-TTS/blob/main/pyproject.toml
  # if a new module-not-found surfaces.
  #
  # `wandb` is also gated at runtime via WANDB_DISABLED=true /
  # WANDB_MODE=disabled in docker-compose.yml so it stays silent —
  # it's training-time observability we never want active.
  "pydub>=0.25",
  "rjieba>=0.1.11",
  "torchdiffeq>=0.2.4",
  "ema-pytorch>=0.5",
  "x-transformers>=1.30",
  "vocos>=0.1.0",
  "wandb>=0.16",
  # The remaining F5-TTS upstream deps not already covered above
  # or via coqui-tts's transitive set. Skipped: gradio (UI),
  # matplotlib (training viz), tensorboard (training).
  "datasets>=2.18",
  "click>=8.0",
  "hydra-core>=1.3",
  "tomli>=2.0",
  "cached-path>=1.6",
  "safetensors>=0.4",

  # Stage 5 (lipsync) + Stage 6 (mux). opencv-headless avoids pulling X11;
  # librosa/scipy are needed for Wav2Lip's mel spectrogram preprocessing.
  "opencv-python-headless>=4.9",
  "librosa>=0.10",
  "scipy>=1.11",

  # torch is intentionally NOT pinned here so users can install the CPU wheel
  # via the PyTorch CPU index. The Dockerfile installs it explicitly.
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "httpx>=0.27",
  "ruff>=0.4",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
